--- a/app/src/main/res/layout/fragment_name_input.xml
+++ b/app/src/main/res/layout/fragment_name_input.xml
@@ -1,116 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/tv_name_input_title"
         android:layout_width="wrap_content"
         android:layout_height="36dp"
-        android:text="이름을 입력해주세요"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/pretendard_bold"
+        android:text="이름을 입력해주세요"
         android:textColor="@color/black"
         android:textSize="26sp"
-        android:layout_marginTop="40dp"
-        android:layout_marginStart="24dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/et_name_input"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:layout_weight="1"
-        android:maxLength="20"
-        android:inputType="text"
-        android:hint="이름 입력"
-        android:textColorHint="@color/gray200"
-        android:layout_marginTop="42dp"
         android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="42dp"
         android:background="@null"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_name_input_title"/>
+        android:hint="이름 입력"
+        android:inputType="text"
+        android:maxLength="20"
+        android:textColorHint="@color/gray200"
+        app:layout_constraintTop_toBottomOf="@id/tv_name_input_title" />
 
     <ImageView
         android:id="@+id/iv_name_input_text_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/ll_name_input_underline"
-        app:layout_constraintRight_toRightOf="@id/ll_name_input_underline"
         android:layout_marginBottom="5dp"
+        android:src="@drawable/btn_clear"
         android:visibility="gone"
-        android:src="@drawable/btn_clear"/>
+        app:layout_constraintBottom_toTopOf="@id/ll_name_input_underline"
+        app:layout_constraintRight_toRightOf="@id/ll_name_input_underline" />
 
     <ImageView
         android:id="@+id/iv_name_input_error_empty"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        app:layout_constraintBottom_toTopOf="@id/ll_name_input_underline"
-        app:layout_constraintRight_toRightOf="@id/ll_name_input_underline"
         android:layout_marginBottom="5dp"
+        android:src="@drawable/ic_error_empty_red"
         android:visibility="gone"
-        android:src="@drawable/ic_error_empty_red"/>
+        app:layout_constraintBottom_toTopOf="@id/ll_name_input_underline"
+        app:layout_constraintRight_toRightOf="@id/ll_name_input_underline" />
 
-
-    <LinearLayout
+    <View
         android:id="@+id/ll_name_input_underline"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        app:layout_constraintTop_toBottomOf="@id/et_name_input"
-        android:layout_marginTop="5dp"
         android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="5dp"
         android:background="@color/gray200"
-        android:orientation="horizontal"/>
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/et_name_input" />
 
-    <!--권장사항 문구-->
     <ImageView
         android:id="@+id/iv_name_input_info_1"
         android:layout_width="15dp"
         android:layout_height="15dp"
-        android:src="@drawable/ic_error_purple"
         android:layout_marginTop="10dp"
+        android:src="@drawable/ic_error_purple"
         app:layout_constraintStart_toStartOf="@id/ll_name_input_underline"
-        app:layout_constraintTop_toBottomOf="@id/ll_name_input_underline"/>
-
+        app:layout_constraintTop_toBottomOf="@id/ll_name_input_underline" />
 
     <TextView
         android:id="@+id/tv_name_input_info_1"
         android:layout_width="wrap_content"
-        android:layout_height="16dp"
-        android:text="공백 없이 20자 이내의 한글, 영어, 숫자로 입력해주세요."
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
         android:fontFamily="@font/pretendard"
+        android:text="공백 없이 20자 이내의 한글, 영어, 숫자로 입력해주세요."
+        android:textColor="@color/texthigh"
         android:textSize="12sp"
-        android:layout_marginStart="5dp"
+        app:layout_constraintBottom_toBottomOf="@id/iv_name_input_info_1"
         app:layout_constraintStart_toEndOf="@id/iv_name_input_info_1"
         app:layout_constraintTop_toTopOf="@id/iv_name_input_info_1"
-        />
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/iv_name_input_info_2"
         android:layout_width="15dp"
         android:layout_height="15dp"
-        android:src="@drawable/ic_error_purple"
         android:layout_marginTop="10dp"
+        android:src="@drawable/ic_error_purple"
         app:layout_constraintStart_toStartOf="@id/iv_name_input_info_1"
-        app:layout_constraintTop_toBottomOf="@id/iv_name_input_info_1"/>
+        app:layout_constraintTop_toBottomOf="@id/iv_name_input_info_1" />
 
     <TextView
         android:id="@+id/tv_name_input_info_2"
         android:layout_width="wrap_content"
-        android:layout_height="16dp"
-        android:text="참여자 간 원활한 소통을 위해 실명을 권장합니다."
-        android:fontFamily="@font/pretendard"
-        android:textSize="12sp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
+        android:fontFamily="@font/pretendard"
+        android:text="참여자 간 원활한 소통을 위해 실명을 권장합니다."
+        android:textColor="@color/texthigh"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/iv_name_input_info_2"
         app:layout_constraintStart_toEndOf="@id/iv_name_input_info_2"
-        app:layout_constraintTop_toTopOf="@id/iv_name_input_info_2"
-        />
+        app:layout_constraintTop_toTopOf="@id/iv_name_input_info_2" />
 
-
-    <!--완료 버튼-->
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_name_input_done_btn"
         android:layout_width="match_parent"
@@ -119,23 +113,26 @@
         android:layout_marginBottom="46dp"
         app:cardBackgroundColor="@color/gray200"
         app:cardCornerRadius="12dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:cardElevation="0dp">
+        app:cardElevation="0dp"
+        app:layout_constraintBottom_toBottomOf="parent">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
-                android:text="완료"
                 android:fontFamily="@font/pretendard"
+                android:text="완료"
                 android:textColor="@color/grayWhite"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
