--- a/app/src/main/res/layout/activity_fix_plan_confirm.xml
+++ b/app/src/main/res/layout/activity_fix_plan_confirm.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/grayWhite">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="25dp"
-        tools:ignore="MissingConstraints">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -44,8 +44,8 @@
                 android:id="@+id/tv_fix_confirm_name_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="46dp"
                 android:layout_marginHorizontal="24dp"
+                android:layout_marginTop="46dp"
                 android:text="약속 이름"
                 android:textColor="@color/select_focus"
                 app:layout_constraintStart_toStartOf="parent"
@@ -56,12 +56,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="22dp"
                 android:layout_marginTop="10dp"
-                android:textSize="18sp"
                 android:text="약속이름"
                 android:textColor="@color/texthigh"
-                app:layout_constraintTop_toBottomOf="@id/tv_fix_confirm_name_title"
-                app:layout_constraintStart_toStartOf="@id/tv_fix_confirm_name_title"/>
-            
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="@id/tv_fix_confirm_name_title"
+                app:layout_constraintTop_toBottomOf="@id/tv_fix_confirm_name_title" />
+
             <View
                 android:id="@+id/v_tv_fix_confirm_line1"
                 android:layout_width="match_parent"
@@ -69,9 +69,9 @@
                 android:layout_marginHorizontal="24dp"
                 android:layout_marginTop="8dp"
                 android:background="@color/gray100"
-                app:layout_constraintTop_toBottomOf="@id/tv_fix_confirm_name"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/tv_fix_confirm_name" />
 
             <TextView
                 android:id="@+id/tv_fix_confirm_date_title"
@@ -81,18 +81,18 @@
                 android:text="약속 날짜"
                 android:textColor="@color/select_focus"
                 app:layout_constraintStart_toStartOf="@id/tv_fix_confirm_name_title"
-                app:layout_constraintTop_toBottomOf="@id/v_tv_fix_confirm_line1"/>
+                app:layout_constraintTop_toBottomOf="@id/v_tv_fix_confirm_line1" />
 
             <TextView
                 android:id="@+id/tv_fix_confirm_date"
                 android:layout_width="wrap_content"
                 android:layout_height="22dp"
                 android:layout_marginTop="10dp"
-                android:textSize="18sp"
                 android:text="2024.00.00"
                 android:textColor="@color/texthigh"
-                app:layout_constraintTop_toBottomOf="@id/tv_fix_confirm_date_title"
-                app:layout_constraintStart_toStartOf="@id/tv_fix_confirm_date_title"/>
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="@id/tv_fix_confirm_date_title"
+                app:layout_constraintTop_toBottomOf="@id/tv_fix_confirm_date_title" />
 
             <View
                 android:id="@+id/v_tv_fix_confirm_line2"
@@ -101,9 +101,9 @@
                 android:layout_marginHorizontal="24dp"
                 android:layout_marginTop="8dp"
                 android:background="@color/gray100"
-                app:layout_constraintTop_toBottomOf="@id/tv_fix_confirm_date"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/tv_fix_confirm_date" />
 
             <TextView
                 android:id="@+id/tv_fix_confirm_time_title"
@@ -113,18 +113,18 @@
                 android:text="약속 시간"
                 android:textColor="@color/select_focus"
                 app:layout_constraintStart_toStartOf="@id/tv_fix_confirm_name_title"
-                app:layout_constraintTop_toBottomOf="@id/v_tv_fix_confirm_line2"/>
+                app:layout_constraintTop_toBottomOf="@id/v_tv_fix_confirm_line2" />
 
             <TextView
                 android:id="@+id/tv_fix_confirm_time"
                 android:layout_width="wrap_content"
                 android:layout_height="22dp"
                 android:layout_marginTop="10dp"
-                android:textSize="18sp"
                 android:text="00:00"
                 android:textColor="@color/texthigh"
-                app:layout_constraintTop_toBottomOf="@id/tv_fix_confirm_time_title"
-                app:layout_constraintStart_toStartOf="@id/tv_fix_confirm_time_title"/>
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="@id/tv_fix_confirm_time_title"
+                app:layout_constraintTop_toBottomOf="@id/tv_fix_confirm_time_title" />
 
             <View
                 android:id="@+id/v_tv_fix_confirm_line3"
@@ -133,9 +133,9 @@
                 android:layout_marginHorizontal="24dp"
                 android:layout_marginTop="8dp"
                 android:background="@color/gray100"
-                app:layout_constraintTop_toBottomOf="@id/tv_fix_confirm_time"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/tv_fix_confirm_time" />
 
             <TextView
                 android:id="@+id/tv_fix_confirm_participants_title"
@@ -160,8 +160,6 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_fix_confirm_participants_title"
                 app:spanCount="2" />
 
-
-
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
@@ -174,23 +172,26 @@
         android:layout_marginBottom="46dp"
         app:cardBackgroundColor="@color/purpleMain"
         app:cardCornerRadius="12dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
-                android:text="확인"
                 android:fontFamily="@font/pretendard"
+                android:text="확인"
                 android:textColor="@color/grayWhite"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+                app:layout_constraintTop_toTopOf="parent" />
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
